--- a/day-69-starting-files-blog-with-users/templates/post.html
+++ b/day-69-starting-files-blog-with-users/templates/post.html
@@ -37,17 +37,23 @@
         <!-- Comments Area -->
         <!-- TODO: Add a CKEditor for commenting below -->
         <div class="comment">
+            {{ ckeditor.load() }} {{ ckeditor.config(name='comment_text') }}
+          {{render_form(form, novalidate=True, button_map={"submit": "primary"}) }}
           <!-- TODO: Show all the comments on a post -->
           <ul class="commentList">
+              {% for comment in post.comments: %}
             <li>
               <div class="commenterImage">
-                <img src="../static/assets/img/default-profile.jpg" />
+                <img
+                  src="{{ comment.comment_author.email | gravatar }}"
+                />
               </div>
               <div class="commentText">
-                <p>Some comment</p>
-                <span class="date sub-text">comment author name</span>
+                {{comment.text|safe}}
+                <span class="sub-text">{{comment.comment_author.name}}</span>
               </div>
             </li>
+            {% endfor %}
           </ul>
         </div>
       </div>
